Update package.json to conform to Medusa v2.7.0

--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "prepublishOnly": "medusa plugin:build"
   },
   "devDependencies": {
-    "@medusajs/admin-sdk": "2.4.0",
-    "@medusajs/cli": "2.4.0",
-    "@medusajs/framework": "2.4.0",
-    "@medusajs/icons": "2.4.0",
-    "@medusajs/medusa": "2.4.0",
-    "@medusajs/test-utils": "2.4.0",
-    "@medusajs/ui": "4.0.3",
+    "@medusajs/admin-sdk": "2.7.0",
+    "@medusajs/cli": "2.7.0",
+    "@medusajs/framework": "2.7.0",
+    "@medusajs/icons": "2.7.0",
+    "@medusajs/medusa": "2.7.0",
+    "@medusajs/test-utils": "2.7.0",
+    "@medusajs/ui": "4.0.8",
     "@mikro-orm/cli": "6.4.3",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
@@ -59,13 +59,13 @@
     "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
-    "@medusajs/admin-sdk": "^2.4.0",
-    "@medusajs/cli": "^2.4.0",
-    "@medusajs/framework": "^2.4.0",
-    "@medusajs/icons": "^2.4.0",
-    "@medusajs/js-sdk": "^2.4.0",
-    "@medusajs/medusa": "^2.4.0",
-    "@medusajs/test-utils": "^2.4.0",
+    "@medusajs/admin-sdk": "^2.7.0",
+    "@medusajs/cli": "^2.7.0",
+    "@medusajs/framework": "^2.7.0",
+    "@medusajs/icons": "^2.7.0",
+    "@medusajs/js-sdk": "^2.7.0",
+    "@medusajs/medusa": "^2.7.0",
+    "@medusajs/test-utils": "^2.7.0",
     "@medusajs/ui": "^4.0.3",
     "@mikro-orm/cli": "^6.4.3",
     "@mikro-orm/core": "^6.4.3",
@@ -74,6 +74,18 @@
     "@mikro-orm/postgresql": "^6.4.3",
     "awilix": "^8.0.1",
     "pg": "^8.13.0"
+  },
+  "exports": {
+    "./package.json": "./package.json",
+    "./workflows": "./.medusa/server/src/workflows/index.js",
+    "./.medusa/server/src/modules/*": "./.medusa/server/src/modules/*/index.js",
+    "./providers/*": "./.medusa/server/src/providers/*/index.js",
+    "./*": "./.medusa/server/src/*.js",
+    "./admin": {
+      "import": "./.medusa/server/src/admin/index.mjs",
+      "require": "./.medusa/server/src/admin/index.js",
+      "default": "./.medusa/server/src/admin/index.js"
+    }
   },
   "engines": {
     "node": ">=20"
