Changes to package.json and README

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "plugin",
     "medusa-plugin-other",
     "medusa-plugin",
+    "medusa-plugin-integration",
     "medusa-v2",
     "variant-images"
   ],
