--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     ".medusa/server"
   ],
   "keywords": [
-    "medusa",
-    "plugin",
     "medusa-plugin-other",
     "medusa-plugin",
     "medusa-plugin-integration",
@@ -26,13 +24,13 @@
     "prepublishOnly": "medusa plugin:build"
   },
   "devDependencies": {
-    "@medusajs/admin-sdk": "2.7.0",
-    "@medusajs/cli": "2.7.0",
-    "@medusajs/framework": "2.7.0",
-    "@medusajs/icons": "2.7.0",
-    "@medusajs/medusa": "2.7.0",
-    "@medusajs/test-utils": "2.7.0",
-    "@medusajs/ui": "4.0.8",
+    "@medusajs/admin-sdk": "2.8.2",
+    "@medusajs/cli": "2.8.2",
+    "@medusajs/framework": "2.8.2",
+    "@medusajs/icons": "2.8.2",
+    "@medusajs/medusa": "2.8.2",
+    "@medusajs/test-utils": "2.8.2",
+    "@medusajs/ui": "4.0.12",
     "@mikro-orm/cli": "6.4.3",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
@@ -60,13 +58,13 @@
     "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
-    "@medusajs/admin-sdk": "^2.7.0",
-    "@medusajs/cli": "^2.7.0",
-    "@medusajs/framework": "^2.7.0",
-    "@medusajs/icons": "^2.7.0",
-    "@medusajs/js-sdk": "^2.7.0",
-    "@medusajs/medusa": "^2.7.0",
-    "@medusajs/test-utils": "^2.7.0",
+    "@medusajs/admin-sdk": "^2.8.2",
+    "@medusajs/cli": "^2.8.2",
+    "@medusajs/framework": "^2.8.2",
+    "@medusajs/icons": "^2.8.2",
+    "@medusajs/js-sdk": "^2.8.2",
+    "@medusajs/medusa": "^2.8.2",
+    "@medusajs/test-utils": "^2.8.2",
     "@medusajs/ui": "^4.0.3",
     "@mikro-orm/cli": "^6.4.3",
     "@mikro-orm/core": "^6.4.3",
@@ -80,6 +78,7 @@
     "./package.json": "./package.json",
     "./workflows": "./.medusa/server/src/workflows/index.js",
     "./.medusa/server/src/modules/*": "./.medusa/server/src/modules/*/index.js",
+    "./modules/*": "./.medusa/server/src/modules/*/index.js",
     "./providers/*": "./.medusa/server/src/providers/*/index.js",
     "./*": "./.medusa/server/src/*.js",
     "./admin": {
