--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "medusa-variant-images",
+  "name": "product-variant-images-fixed",
   "version": "1.1.2",
   "description": "A variant images plugin for Medusa V2.",
-  "author": "Betanoir",
+  "author": "tadinski",
   "repository": {
     "type": "git",
     "url": "https://github.com/Betanoir/medusa-variant-images"
@@ -24,12 +24,12 @@
     "prepublishOnly": "medusa plugin:build"
   },
   "devDependencies": {
-    "@medusajs/admin-sdk": "2.8.2",
-    "@medusajs/cli": "2.8.2",
-    "@medusajs/framework": "2.8.2",
-    "@medusajs/icons": "2.8.2",
-    "@medusajs/medusa": "2.8.2",
-    "@medusajs/test-utils": "2.8.2",
+    "@medusajs/admin-sdk": "2.8.8-snapshot-20250714090316",
+    "@medusajs/cli": "2.8.8-snapshot-20250714090316",
+    "@medusajs/framework": "2.8.8-snapshot-20250714090316",
+    "@medusajs/icons": "2.8.8-snapshot-20250714090316",
+    "@medusajs/medusa": "2.8.8-snapshot-20250714090316",
+    "@medusajs/test-utils": "2.8.8-snapshot-20250714090316",
     "@medusajs/ui": "4.0.12",
     "@mikro-orm/cli": "6.4.3",
     "@mikro-orm/core": "6.4.3",
@@ -58,13 +58,13 @@
     "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
-    "@medusajs/admin-sdk": "^2.8.2",
-    "@medusajs/cli": "^2.8.2",
-    "@medusajs/framework": "^2.8.2",
-    "@medusajs/icons": "^2.8.2",
-    "@medusajs/js-sdk": "^2.8.2",
-    "@medusajs/medusa": "^2.8.2",
-    "@medusajs/test-utils": "^2.8.2",
+    "@medusajs/admin-sdk": "^2.8.8-snapshot-20250714090316",
+    "@medusajs/cli": "^2.8.8-snapshot-20250714090316",
+    "@medusajs/framework": "^2.8.8-snapshot-20250714090316",
+    "@medusajs/icons": "^2.8.8-snapshot-20250714090316",
+    "@medusajs/js-sdk": "^2.8.8-snapshot-20250714090316",
+    "@medusajs/medusa": "^2.8.8-snapshot-20250714090316",
+    "@medusajs/test-utils": "^2.8.8-snapshot-20250714090316",
     "@medusajs/ui": "^4.0.3",
     "@mikro-orm/cli": "^6.4.3",
     "@mikro-orm/core": "^6.4.3",
